Fix css on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 }
 
 .card-image {
-    height: 326px;
     max-height: 326px;
 }
 
